--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@keyframes slideInBottom {
+    0% {
+      transform: translateY(30px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  
+  .animate__slideInBottom {
+    animation: slideInBottom 2s ease-out forwards; 
+  }
+  
